# demo

./: Cargo.toml
00_macro_include/: Cargo.toml
00_macro_include/src/: lib.rs
10_rast_core/: Cargo.toml
10_rast_core/src/: lib.rs  rast_core.rs
11_rast_gen_rr_val/: Cargo.toml
11_rast_gen_rr_val/src/: gen_tui_val.rs  lib.rs
19_x_my_proc_macro/: Cargo.toml
19_x_my_proc_macro/src/: enum_usize.rs  lib.rs  tui_val.rs  x_bintf.rs  x_collect_enum_named.rs  x_collect_enum_outer.rs  x_collect_enum_unnamed.rs  x_collect_struct_named.rs  x_collect_struct_unnamed.rs
21_x_bintf/: Cargo.toml
21_x_bintf/src/: lib.rs  xos_raw_msg.rs
21_x_bintf/src/my_bintf/: mod.rs  my_jscode_arc.rs  my_jscode_array.rs  my_jscode_box.rs  my_jscode_hashmap.rs  my_jscode_hashset.rs  my_jscode_inner_dyn.rs  my_jscode_option.rs  my_jscode_prim.rs  my_jscode_rc.rs  my_jscode_result.rs  my_jscode_string.rs  my_jscode_tup.rs  my_jscode_vec.rs
21_x_bintf/src/xos_js/: mod.rs  xos_js_array.rs  xos_js_array_buffer.rs  xos_js_array_buffer_vec.rs  xos_js_shared_array_buffer.rs  xos_js_uint32_array.rs  xos_js_uint8_array.rs
98_t2/src/: lib.rs
99_c_main/: Cargo.toml
99_c_main/src/: d00_url.rs  d01_url_map.rs  d02_check_fetched.rs  d03_job_queue.rs  d04_fetcher_async.rs  d99_cluster_manager.rs  lib.rs  retry.md
