[package]
name = "macro_include"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease =  "0.2.16"
syn = { version = "2.0.51", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"
